--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-modernist
+theme: jekyll-sleek
 title: ICYBOB
 description: Initial Conditions of YMCs, Birth of OB associations and long term evolution of stellar clusters
