--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: jekyll-sleek
+remote_theme: jekyll-sleek
 title: ICYBOB
 description: Initial Conditions of YMCs, Birth of OB associations and long term evolution of stellar clusters
 # THEME SETTINGS
